--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>313 Tagged Open Ruby Bugs as of 2022-01-12 09:47:33 +0900</title>
+<title>313 Tagged Open Ruby Bugs as of 2022-01-14 08:14:02 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -15,13 +15,13 @@
 <input type="submit" value="notbug" />
 <input type="submit" value="test" />
 <input type="submit" value="ext" />
-<input type="submit" value="thread" />
 <input type="submit" value="encoding" />
+<input type="submit" value="thread" />
 <input type="submit" value="cygwin" />
 <input type="submit" value="regexp" />
 <input type="submit" value="perf" />
-<input type="submit" value="mjit" />
 <input type="submit" value="fiber" />
+<input type="submit" value="mjit" />
 <input type="submit" value="parser" />
 <input type="submit" value="tracepoint" />
 <input type="submit" value="refine" />
@@ -32,7 +32,7 @@
 <input id="filter" type="text" size="80" />
 (<span id="matched">313</span> matched)
 <table>
-<caption>313 Tagged Open Ruby Bugs as of 2022-01-12 09:47:33 +0900</caption>
+<caption>313 Tagged Open Ruby Bugs as of 2022-01-14 08:14:02 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -41,18 +41,32 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" fiber ">
+<td><a href="https://bugs.ruby-lang.org/issues/18485">18485</a>
+</td>
+<td>fiber</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18485">Even though init a blocking Fiber with Fiber.new(blocking: true) but scheduler is invoked</a>
+</td>
+</tr>
+<tr class=" fiber ">
+<td><a href="https://bugs.ruby-lang.org/issues/18484">18484</a>
+</td>
+<td>fiber</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18484">Fiber should return it self when blocked by IO</a>
+</td>
+</tr>
+<tr class=" os/arch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18480">18480</a>
+</td>
+<td>os/arch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18480">Dtrace enabled build fails on systems with DTRACE_REBUILD=yes</a>
+</td>
+</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18476">18476</a>
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18476">Call to require stuck forever after receiving EAGAIN on writev when running with zeus</a>
-</td>
-</tr>
-<tr class=" thread ">
-<td><a href="https://bugs.ruby-lang.org/issues/18475">18475</a>
-</td>
-<td>thread</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18475">Yielding an element for Enumerator in another thread dumps core</a>
 </td>
 </tr>
 <tr class=" maybenotbug core ">
@@ -74,13 +88,6 @@
 </td>
 <td>win ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18472">rb_w32_map_errno is not found on Ruby-3.1.0</a>
-</td>
-</tr>
-<tr class=" lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/18468">18468</a>
-</td>
-<td>lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18468">Tutorial Link for Optionparser is broken</a>
 </td>
 </tr>
 <tr class=" core maybenotbug ">
@@ -132,10 +139,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/18446">LSAN reporting</a>
 </td>
 </tr>
-<tr class=" core ">
+<tr class=" os/arch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18444">18444</a>
 </td>
-<td>core</td>
+<td>os/arch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18444">Trapped TSTP causes a locking deadlock in 3.0.3 onward</a>
 </td>
 </tr>
@@ -809,13 +816,6 @@
 </td>
 <td>lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17578">mkmf experimental C++ Support</a>
-</td>
-</tr>
-<tr class=" core maybenotbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/17545">17545</a>
-</td>
-<td>core maybenotbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17545">Calling dup on a subclass of Proc returns a Proc and not the subclass</a>
 </td>
 </tr>
 <tr class=" ractor ">
